Fix card overlapping bug
At certain screen sizes, trending title
would overlap with announcement card.

--- a/styles.css
+++ b/styles.css
@@ -138,7 +138,7 @@ p {
   padding: 20px;
 
   display: grid;
-  grid-template: 460px auto / 1fr 300px;
+  grid-template: 480px auto / 1fr 300px;
   gap: 20px;
 }
 
